crates/slate/tests/snapshots/conditionals.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn classify(arg1: i32) -> i32 {
    let mut n: i32 = 0;
    let mut __retval: i32 = 0;
    n = arg1;
    {
        let _v0: i32 = n;
        let _v1: i32 = 0;
        let _v2: bool = _v0 < _v1;
        if _v2 {
            let _v3: i32 = -1;
            __retval = _v3;
            let _v4: i32 = __retval;
            return _v4;
        } else {
            {
                let _v5: i32 = n;
                let _v6: i32 = 0;
                let _v7: bool = _v5 == _v6;
                if _v7 {
                    let _v8: i32 = 0;
                    __retval = _v8;
                    let _v9: i32 = __retval;
                    return _v9;
                } else {
                    let _v10: i32 = 1;
                    __retval = _v10;
                    let _v11: i32 = __retval;
                    return _v11;
                }
            }
        }
    }
    let _v12: i32 = __retval;
    return _v12;
}

fn clamp_low(arg0: i32) -> i32 {
    let mut n: i32 = 0;
    let mut __retval: i32 = 0;
    let mut r: i32 = 0;
    n = arg0;
    let _v0: i32 = n;
    r = _v0;
    {
        let _v1: i32 = n;
        let _v2: i32 = 10;
        let _v3: bool = _v1 < _v2;
        if _v3 {
            let _v4: i32 = 10;
            r = _v4;
        }
    }
    let _v5: i32 = r;
    __retval = _v5;
    let _v6: i32 = __retval;
    return _v6;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: i32 = 0;
    let mut label: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = -5;
    let _v3: i32 = classify(_v2);
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v3) };
    let _v5: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = 0;
    let _v7: i32 = classify(_v6);
    let _v8: i32 = unsafe { printf(_v5 as *const i8, _v7) };
    let _v9: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v10: i32 = 42;
    let _v11: i32 = classify(_v10);
    let _v12: i32 = unsafe { printf(_v9 as *const i8, _v11) };
    let _v13: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v14: i32 = 3;
    let _v15: i32 = clamp_low(_v14);
    let _v16: i32 = unsafe { printf(_v13 as *const i8, _v15) };
    let _v17: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v18: i32 = 20;
    let _v19: i32 = clamp_low(_v18);
    let _v20: i32 = unsafe { printf(_v17 as *const i8, _v19) };
    let _v21: i32 = 7;
    x = _v21;
    {
        let _v22: i32 = x;
        let _v23: i32 = 2;
        let _v24: i32 = _v22 % _v23;
        let _v25: i32 = 0;
        let _v26: bool = _v24 == _v25;
        if _v26 {
            let _v27: i32 = 100;
            label = _v27;
        } else {
            let _v28: i32 = 200;
            label = _v28;
        }
    }
    let _v29: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v30: i32 = label;
    let _v31: i32 = unsafe { printf(_v29 as *const i8, _v30) };
    let _v32: i32 = 0;
    __retval = _v32;
    let _v33: i32 = __retval;
    std::process::exit(_v33 as i32);
}
