crates/slate/tests/snapshots/constructor_destructor_attrs.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn register_default() {
    let _v0: *mut i8 = b"ctor: default\n\0".as_ptr() as *mut i8;
    let _v1: i32 = unsafe { printf(_v0 as *const i8) };
    return;
}

fn cleanup_default() {
    let _v0: *mut i8 = b"dtor: default\n\0".as_ptr() as *mut i8;
    let _v1: i32 = unsafe { printf(_v0 as *const i8) };
    return;
}

fn main() {
    register_default();
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"main\n\0".as_ptr() as *mut i8;
    let _v2: i32 = unsafe { printf(_v1 as *const i8) };
    let _v3: i32 = 0;
    __retval = _v3;
    let _v4: i32 = __retval;
    cleanup_default();
    std::process::exit(_v4 as i32);
}
