crates/slate/tests/snapshots/continue_nested_loops.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn sum_grid(arg0: i32) -> i32 {
    let mut n: i32 = 0;
    let mut __retval: i32 = 0;
    let mut total: i32 = 0;
    n = arg0;
    let _v0: i32 = 0;
    total = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        '__loop0: loop {
            let _v2: i32 = i;
            let _v3: i32 = n;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            '__continue0: {
                {
                    {
                        let _v5: i32 = i;
                        let _v6: i32 = 2;
                        let _v7: bool = _v5 == _v6;
                        if _v7 {
                            break '__continue0;
                        }
                    }
                    {
                        let mut j: i32 = 0;
                        let _v8: i32 = 0;
                        j = _v8;
                        '__loop1: loop {
                            let _v9: i32 = j;
                            let _v10: i32 = n;
                            let _v11: bool = _v9 < _v10;
                            if !_v11 {
                                break;
                            }
                            '__continue1: {
                                {
                                    {
                                        let _v12: i32 = j;
                                        let _v13: i32 = 3;
                                        let _v14: bool = _v12 == _v13;
                                        if _v14 {
                                            break '__continue1;
                                        }
                                    }
                                    let _v15: i32 = i;
                                    let _v16: i32 = 10;
                                    let _v17: i32 = _v15 * _v16;
                                    let _v18: i32 = j;
                                    let _v19: i32 = _v17 + _v18;
                                    let _v20: i32 = total;
                                    let _v21: i32 = _v20 + _v19;
                                    total = _v21;
                                }
                            }
                            let _v22: i32 = j;
                            let _v23: i32 = _v22 + 1;
                            j = _v23;
                        }
                    }
                }
            }
            let _v24: i32 = i;
            let _v25: i32 = _v24 + 1;
            i = _v25;
        }
    }
    let _v26: i32 = total;
    __retval = _v26;
    let _v27: i32 = __retval;
    return _v27;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 5;
    let _v3: i32 = sum_grid(_v2);
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v3) };
    let _v5: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = 1;
    let _v7: i32 = sum_grid(_v6);
    let _v8: i32 = unsafe { printf(_v5 as *const i8, _v7) };
    let _v9: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v10: i32 = 0;
    let _v11: i32 = sum_grid(_v10);
    let _v12: i32 = unsafe { printf(_v9 as *const i8, _v11) };
    let _v13: i32 = 0;
    __retval = _v13;
    let _v14: i32 = __retval;
    std::process::exit(_v14 as i32);
}
