crates/slate/tests/snapshots/control_flow_builtin_ops.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn likely_nonzero(arg3: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg3;
    {
        let _v0: i32 = x;
        let _v1: i32 = 0;
        let _v2: bool = _v0 != _v1;
        if _v2 {
            let _v3: i32 = x;
            let _v4: i32 = 0;
            let _v5: bool = _v3 != _v4;
            unsafe { core::hint::assert_unchecked(_v5) };
            let _v6: i32 = x;
            let _v7: i32 = 10;
            let _v8: i32 = _v6 + _v7;
            __retval = _v8;
            let _v9: i32 = __retval;
            return _v9;
        }
    }
    let _v10: i32 = -1;
    __retval = _v10;
    let _v11: i32 = __retval;
    return _v11;
}

fn assume_true(arg2: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg2;
    let _v0: i32 = 1;
    let _v1: bool = _v0 != 0;
    unsafe { core::hint::assert_unchecked(_v1) };
    let _v2: i32 = x;
    let _v3: i32 = 1;
    let _v4: i32 = _v2 + _v3;
    __retval = _v4;
    let _v5: i32 = __retval;
    return _v5;
}

fn guarded_trap(arg1: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg1;
    {
        let _v0: i32 = x;
        let _v1: i32 = 0;
        let _v2: bool = _v0 < _v1;
        if _v2 {
            std::process::abort();
        }
    }
    let _v3: i32 = x;
    __retval = _v3;
    let _v4: i32 = __retval;
    return _v4;
}

fn guarded_unreachable(arg0: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg0;
    {
        let _v0: i32 = x;
        let _v1: i32 = 0;
        let _v2: bool = _v0 < _v1;
        if _v2 {
            unreachable!();
        }
    }
    let _v3: i32 = x;
    let _v4: i32 = 2;
    let _v5: i32 = _v3 * _v4;
    __retval = _v5;
    let _v6: i32 = __retval;
    return _v6;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut input: i32 = 0;
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut c: i32 = 0;
    let mut d: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 5;
    unsafe { std::ptr::write_volatile(std::ptr::addr_of_mut!(input), _v1) };
    let _v2: i32 = unsafe { std::ptr::read_volatile(std::ptr::addr_of!(input)) };
    let _v3: i32 = likely_nonzero(_v2);
    a = _v3;
    let _v4: i32 = unsafe { std::ptr::read_volatile(std::ptr::addr_of!(input)) };
    let _v5: i32 = assume_true(_v4);
    b = _v5;
    let _v6: i32 = unsafe { std::ptr::read_volatile(std::ptr::addr_of!(input)) };
    let _v7: i32 = guarded_trap(_v6);
    c = _v7;
    let _v8: i32 = unsafe { std::ptr::read_volatile(std::ptr::addr_of!(input)) };
    let _v9: i32 = guarded_unreachable(_v8);
    d = _v9;
    let _v10: *mut i8 = b"%d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v11: i32 = a;
    let _v12: i32 = b;
    let _v13: i32 = c;
    let _v14: i32 = d;
    let _v15: i32 = unsafe { printf(_v10 as *const i8, _v11, _v12, _v13, _v14) };
    let _v16: i32 = 0;
    __retval = _v16;
    let _v17: i32 = __retval;
    std::process::exit(_v17 as i32);
}
