crates/slate/tests/snapshots/ctype_classify_setlocale_non_c.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn setlocale(_0: i32, _1: *const i8) -> *mut i8;
    fn isalpha(_0: i32) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
    fn isdigit(_0: i32) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut c: i8 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 6;
    let _v2: *mut i8 = b"\0".as_ptr() as *mut i8;
    let _v3: *mut i8 = unsafe { setlocale(_v1 as i32, _v2 as *const i8) };
    let _v4: i8 = 65;
    c = _v4;
    {
        let _v5: i8 = c;
        let _v6: i32 = _v5 as i32;
        let _v7: i32 = unsafe { isalpha(_v6 as i32) };
        let _v8: bool = _v7 != 0;
        if _v8 {
            let _v9: *mut i8 = b"yes\n\0".as_ptr() as *mut i8;
            let _v10: i32 = unsafe { printf(_v9 as *const i8) };
        } else {
            let _v11: *mut i8 = b"no\n\0".as_ptr() as *mut i8;
            let _v12: i32 = unsafe { printf(_v11 as *const i8) };
        }
    }
    {
        let _v13: i8 = c;
        let _v14: i32 = _v13 as i32;
        let _v15: i32 = unsafe { isdigit(_v14 as i32) };
        let _v16: bool = _v15 != 0;
        if _v16 {
            let _v17: *mut i8 = b"digit\n\0".as_ptr() as *mut i8;
            let _v18: i32 = unsafe { printf(_v17 as *const i8) };
        } else {
            let _v19: *mut i8 = b"not-digit\n\0".as_ptr() as *mut i8;
            let _v20: i32 = unsafe { printf(_v19 as *const i8) };
        }
    }
    let _v21: i32 = 0;
    __retval = _v21;
    let _v22: i32 = __retval;
    std::process::exit(_v22 as i32);
}
