crates/slate/tests/snapshots/ctype_libc_setlocale_non_c.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn setlocale(_0: i32, _1: *const i8) -> *mut i8;
    fn printf(_0: *const i8, ...) -> i32;
    fn toupper(_0: i32) -> i32;
    fn tolower(_0: i32) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut lower: i32 = 0;
    let mut upper: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 6;
    let _v2: *mut i8 = b"\0".as_ptr() as *mut i8;
    let _v3: *mut i8 = unsafe { setlocale(_v1 as i32, _v2 as *const i8) };
    let _v4: i32 = 113;
    lower = _v4;
    let _v5: i32 = 81;
    upper = _v5;
    let _v6: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v7: i32 = lower;
    let _v8: i32 = unsafe { toupper(_v7 as i32) };
    let _v9: i32 = upper;
    let _v10: i32 = unsafe { tolower(_v9 as i32) };
    let _v11: i32 = unsafe { printf(_v6 as *const i8, _v8, _v10) };
    let _v12: i32 = 0;
    __retval = _v12;
    let _v13: i32 = __retval;
    std::process::exit(_v13 as i32);
}
