crates/slate/tests/snapshots/decrement.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: i32 = 0;
    let mut post: i32 = 0;
    let mut pre: i32 = 0;
    let mut sum: i32 = 0;
    let mut c: u8 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 5;
    a = _v1;
    let _v2: i32 = a;
    let _v3: i32 = _v2 - 1;
    a = _v3;
    post = _v2;
    let _v4: i32 = a;
    let _v5: i32 = _v4 - 1;
    a = _v5;
    pre = _v5;
    let _v6: i32 = a;
    let _v7: i32 = _v6 - 1;
    a = _v7;
    let _v8: i32 = pre;
    let _v9: i32 = _v8 - 1;
    pre = _v9;
    let _v10: i32 = _v6 + _v9;
    sum = _v10;
    let _v11: *mut i8 = b"%d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v12: i32 = a;
    let _v13: i32 = post;
    let _v14: i32 = pre;
    let _v15: i32 = sum;
    let _v16: i32 = unsafe { printf(_v11 as *const i8, _v12, _v13, _v14, _v15) };
    let _v17: u8 = 0;
    c = _v17;
    let _v18: u8 = c;
    let _v19: u8 = _v18 - 1;
    c = _v19;
    let _v20: *mut i8 = b"%u\n\0".as_ptr() as *mut i8;
    let _v21: u8 = c;
    let _v22: u32 = _v21 as u32;
    let _v23: i32 = unsafe { printf(_v20 as *const i8, _v22) };
    let _v24: i32 = 0;
    __retval = _v24;
    let _v25: i32 = __retval;
    std::process::exit(_v25 as i32);
}
