crates/slate/tests/snapshots/destructor_early_return.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn cleanup() {
    let _v0: *mut i8 = b"destructor ran\n\0".as_ptr() as *mut i8;
    let _v1: i32 = unsafe { printf(_v0 as *const i8) };
    return;
}

fn main() {
    let mut __slate_argv_storage: Vec<std::ffi::CString> = std::env::args().map(|arg| std::ffi::CString::new(arg).unwrap()).collect();
    let mut __slate_argv_ptrs: Vec<*mut i8> = __slate_argv_storage.iter().map(|arg| arg.as_ptr() as *mut i8).collect();
    __slate_argv_ptrs.push(std::ptr::null_mut());
    let arg0: i32 = __slate_argv_storage.len() as i32;
    let arg1: *mut *mut i8 = __slate_argv_ptrs.as_mut_ptr();
    let mut argc: i32 = 0;
    let mut argv: *mut *mut i8 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    argc = arg0;
    argv = arg1;
    let _v0: i32 = 0;
    __retval = _v0;
    {
        let _v1: i32 = argc;
        let _v2: i32 = 1;
        let _v3: bool = _v1 == _v2;
        if _v3 {
            let _v4: *mut i8 = b"early exit\n\0".as_ptr() as *mut i8;
            let _v5: i32 = unsafe { printf(_v4 as *const i8) };
            let _v6: i32 = 7;
            __retval = _v6;
            let _v7: i32 = __retval;
            cleanup();
            std::process::exit(_v7 as i32);
        }
    }
    let _v8: *mut i8 = b"main ran\n\0".as_ptr() as *mut i8;
    let _v9: i32 = unsafe { printf(_v8 as *const i8) };
    let _v10: i32 = 0;
    __retval = _v10;
    let _v11: i32 = __retval;
    cleanup();
    std::process::exit(_v11 as i32);
}
